{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 20,
  "lineage": "27b1aa8b-d29d-6a9b-e4f3-30fdc5258a80",
  "resources": [
    {
      "module": "module.gce-k8s-worker",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-05-06T22:21:08.577-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/devopsbar20/global/firewalls/k8s-worker-allow-http",
            "name": "k8s-worker-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/devopsbar20/global/networks/default",
            "priority": 1000,
            "project": "devopsbar20",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devopsbar20/global/firewalls/k8s-worker-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "worker-http"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.gce-k8s-master",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-05-06T22:21:04.357-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/devopsbar20/global/firewalls/k8s-master-allow-http",
            "name": "k8s-master-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/devopsbar20/global/networks/default",
            "priority": 1000,
            "project": "devopsbar20",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devopsbar20/global/firewalls/k8s-master-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "master-http"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.gce-k8s-master",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s_master",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20200429",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devopsbar20/zones/us-west1-a/disks/k8s-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devopsbar20/zones/us-west1-a/instances/k8s-master",
            "instance_id": "2722725744137348141",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-highmem-2",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDXoTW0APtYHWQhNZWkK2RkF5KAur4qie5CBamI6rN8mMI84D35xkofuTJ2SdvN4763bjkT1YC5EIqBaLpQtUOvvl57yiWuh7qDq1sAOj3DhlMqfcNid80GqOgQG861jwOcq/i1IpZigmf50fkwGHFJuF8tFFgLPGLMbBDL/7JLcDb+uuzm3TBxWQR2Vqabbsd0z3pJBRF9/We/r6+Bs0ACZ7XsI3E/27vrsgRZT69ExVfRl1V2c6205QBacUO70dUpwA5o641IBEluBhIC0try6l2poL0WEq2VVMCPnszt2ky8eD16IzttczQbhpEwo4UFCcaZfqkq91fDHMcvuYHh root@opttech1c.mylabserver.com\n",
              "startup-script": "        echo \"ansible123\" | passwd --stdin root\n        sed -i 's/PermitRootLogin no/PermitRootLogin yes/g' /etc/ssh/sshd_config\n        sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/g' /etc/ssh/sshd_config\n        systemctl restart sshd\n"
            },
            "metadata_fingerprint": "sPDW2oW11cU=",
            "name": "k8s-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.83.82.184",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devopsbar20/global/networks/default",
                "network_ip": "10.138.0.15",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devopsbar20/regions/us-west1/subnetworks/default",
                "subnetwork_project": "devopsbar20"
              }
            ],
            "project": "devopsbar20",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devopsbar20/zones/us-west1-a/instances/k8s-master",
            "service_account": [
              {
                "email": "377601337062-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.full_control",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-master"
            ],
            "tags_fingerprint": "_LH7AApl0rc=",
            "zone": "us-west1-a"
          }
        }
      ]
    },
    {
      "module": "module.gce-k8s-worker",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s_worker",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20200429",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devopsbar20/zones/us-west1-a/disks/k8s-worker1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devopsbar20/zones/us-west1-a/instances/k8s-worker1",
            "instance_id": "2563234873789522985",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-highmem-2",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDXoTW0APtYHWQhNZWkK2RkF5KAur4qie5CBamI6rN8mMI84D35xkofuTJ2SdvN4763bjkT1YC5EIqBaLpQtUOvvl57yiWuh7qDq1sAOj3DhlMqfcNid80GqOgQG861jwOcq/i1IpZigmf50fkwGHFJuF8tFFgLPGLMbBDL/7JLcDb+uuzm3TBxWQR2Vqabbsd0z3pJBRF9/We/r6+Bs0ACZ7XsI3E/27vrsgRZT69ExVfRl1V2c6205QBacUO70dUpwA5o641IBEluBhIC0try6l2poL0WEq2VVMCPnszt2ky8eD16IzttczQbhpEwo4UFCcaZfqkq91fDHMcvuYHh root@opttech1c.mylabserver.com\n",
              "startup-script": "        echo \"ansible123\" | passwd --stdin root\n        sed -i 's/PermitRootLogin no/PermitRootLogin yes/g' /etc/ssh/sshd_config\n        sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/g' /etc/ssh/sshd_config\n        systemctl restart sshd\n"
            },
            "metadata_fingerprint": "sPDW2oW11cU=",
            "name": "k8s-worker1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.230.81.203",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devopsbar20/global/networks/default",
                "network_ip": "10.138.0.16",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devopsbar20/regions/us-west1/subnetworks/default",
                "subnetwork_project": "devopsbar20"
              }
            ],
            "project": "devopsbar20",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devopsbar20/zones/us-west1-a/instances/k8s-worker1",
            "service_account": [
              {
                "email": "377601337062-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.full_control",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-worker1"
            ],
            "tags_fingerprint": "4GQT1ykIby8=",
            "zone": "us-west1-a"
          }
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20200429",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devopsbar20/zones/us-west1-a/disks/k8s-worker2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devopsbar20/zones/us-west1-a/instances/k8s-worker2",
            "instance_id": "4860284031953937453",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-highmem-2",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDXoTW0APtYHWQhNZWkK2RkF5KAur4qie5CBamI6rN8mMI84D35xkofuTJ2SdvN4763bjkT1YC5EIqBaLpQtUOvvl57yiWuh7qDq1sAOj3DhlMqfcNid80GqOgQG861jwOcq/i1IpZigmf50fkwGHFJuF8tFFgLPGLMbBDL/7JLcDb+uuzm3TBxWQR2Vqabbsd0z3pJBRF9/We/r6+Bs0ACZ7XsI3E/27vrsgRZT69ExVfRl1V2c6205QBacUO70dUpwA5o641IBEluBhIC0try6l2poL0WEq2VVMCPnszt2ky8eD16IzttczQbhpEwo4UFCcaZfqkq91fDHMcvuYHh root@opttech1c.mylabserver.com\n",
              "startup-script": "        echo \"ansible123\" | passwd --stdin root\n        sed -i 's/PermitRootLogin no/PermitRootLogin yes/g' /etc/ssh/sshd_config\n        sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/g' /etc/ssh/sshd_config\n        systemctl restart sshd\n"
            },
            "metadata_fingerprint": "sPDW2oW11cU=",
            "name": "k8s-worker2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.83.139.82",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devopsbar20/global/networks/default",
                "network_ip": "10.138.0.17",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devopsbar20/regions/us-west1/subnetworks/default",
                "subnetwork_project": "devopsbar20"
              }
            ],
            "project": "devopsbar20",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devopsbar20/zones/us-west1-a/instances/k8s-worker2",
            "service_account": [
              {
                "email": "377601337062-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.full_control",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-worker2"
            ],
            "tags_fingerprint": "OXK0t8umgrw=",
            "zone": "us-west1-a"
          }
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20200429",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devopsbar20/zones/us-west1-a/disks/k8s-worker3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devopsbar20/zones/us-west1-a/instances/k8s-worker3",
            "instance_id": "8783661241519186989",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-highmem-2",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDXoTW0APtYHWQhNZWkK2RkF5KAur4qie5CBamI6rN8mMI84D35xkofuTJ2SdvN4763bjkT1YC5EIqBaLpQtUOvvl57yiWuh7qDq1sAOj3DhlMqfcNid80GqOgQG861jwOcq/i1IpZigmf50fkwGHFJuF8tFFgLPGLMbBDL/7JLcDb+uuzm3TBxWQR2Vqabbsd0z3pJBRF9/We/r6+Bs0ACZ7XsI3E/27vrsgRZT69ExVfRl1V2c6205QBacUO70dUpwA5o641IBEluBhIC0try6l2poL0WEq2VVMCPnszt2ky8eD16IzttczQbhpEwo4UFCcaZfqkq91fDHMcvuYHh root@opttech1c.mylabserver.com\n",
              "startup-script": "        echo \"ansible123\" | passwd --stdin root\n        sed -i 's/PermitRootLogin no/PermitRootLogin yes/g' /etc/ssh/sshd_config\n        sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/g' /etc/ssh/sshd_config\n        systemctl restart sshd\n"
            },
            "metadata_fingerprint": "sPDW2oW11cU=",
            "name": "k8s-worker3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.83.252.113",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devopsbar20/global/networks/default",
                "network_ip": "10.138.0.18",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devopsbar20/regions/us-west1/subnetworks/default",
                "subnetwork_project": "devopsbar20"
              }
            ],
            "project": "devopsbar20",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devopsbar20/zones/us-west1-a/instances/k8s-worker3",
            "service_account": [
              {
                "email": "377601337062-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.full_control",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-worker3"
            ],
            "tags_fingerprint": "39Hie5sFHWk=",
            "zone": "us-west1-a"
          }
        }
      ]
    }
  ]
}